<resources>
    <string name="app_name">redsocialuca</string>
    <string name="RegistrarBTN">Registrarse</string>
    <string name="LoginBTN">Iniciar secion</string>
    <string name="RegistrateTXT">Registrate</string>

    <!--aqui comienzan los atributos del registro-->

    <string name="Nombre">Nombres</string>
    <string name="Apellido">Apellidos</string>
    <string name="Correo">Correo Electronico</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Edad">Edad</string>
    <string name="TerminarBTN">Terminar</string>


</resources>