<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:layout_gravity="center"
    tools:context=".Registro">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/RegistrateTXT"
            android:gravity="center"
            android:textColor="#008000"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/img"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <!--nombre-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Nombre"
                android:textStyle="italic"
                android:inputType="textPersonName"/>

        <!--apellido-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/Apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Apellido"
            android:textStyle="italic"
            android:inputType="textPersonName"/>

        <!--edad-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/Edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Edad"
            android:textStyle="italic"
            android:inputType="date"/>

        <!--correo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/Correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Correo"
            android:textStyle="italic"
            android:inputType="textEmailAddress"/>

        <!--contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/Contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Contraseña"
            android:textStyle="italic"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/TerminarBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#000000"
            android:textColor="#c7bda7"
            android:text="@string/TerminarBTN"/>




    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>